salesforce-project-manager/force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <label>プロジェクト</label>
    <pluralLabel>プロジェクト</pluralLabel>
    <nameField>
        <label>プロジェクト名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>プロジェクトの基本情報、進捗、期間を管理するオブジェクト。</description>
</CustomObject>