salesforce-project-manager/force-app/main/default/objects/Project__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>予算</label>
    <description>プロジェクトに割り当てられた総予算額</description>
    <inlineHelpText>プロジェクトの承認済み予算を円（JPY）で入力してください</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>