salesforce-project-manager/force-app/main/default/objects/Project__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>顧客</label>
    <description>このプロジェクトを依頼した顧客・取引先へのリンク</description>
    <inlineHelpText>このプロジェクトの依頼元顧客を選択してください</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>プロジェクト</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>