salesforce-project-manager/force-app/main/default/objects/Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>概要</label>
    <description>プロジェクトの目的、スコープ、背景についての詳細説明</description>
    <inlineHelpText>プロジェクトの目的と主要な成果物を記述してください</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>