salesforce-project-manager/force-app/main/default/objects/Project__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>終了日</label>
    <description>プロジェクトの完了予定日</description>
    <inlineHelpText>プロジェクトの納期または完了予定日を入力してください</inlineHelpText>
    <type>Date</type>
</CustomField>