salesforce-project-manager/force-app/main/default/objects/Project__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>開始日</label>
    <description>プロジェクトの作業開始予定日</description>
    <inlineHelpText>プロジェクトを正式に開始する日付を入力してください</inlineHelpText>
    <type>Date</type>
</CustomField>