salesforce-project-manager/force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <description>プロジェクトの現在の進捗状態を示す</description>
    <inlineHelpText>プロジェクトの現在フェーズを選択してください（例：計画中→進行中→完了）</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>計画中</fullName>
                <default>true</default>
                <label>計画中</label>
            </value>
            <value>
                <fullName>進行中</fullName>
            </value>
            <value>
                <fullName>保留</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>