salesforce-project-manager/force-app/main/default/objects/Project__c/fields/Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Task_Count__c</fullName>
    <label>タスク数</label>
    <description>このプロジェクトに登録されたタスクの総数</description>
    <inlineHelpText>関連するタスクレコードから自動集計されます</inlineHelpText>
    <type>Summary</type>
    <summaryOperation>count</summaryOperation>
    <summaryForeignKey>Task__c.Project__c</summaryForeignKey>
</CustomField>