salesforce-project-manager/force-app/main/default/objects/Project__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <label>合計費用</label>
    <description>このプロジェクトに登録された全費用の合計</description>
    <inlineHelpText>関連する費用レコードから自動集計されます</inlineHelpText>
    <type>Summary</type>
    <summaryOperation>sum</summaryOperation>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense__c.Project__c</summaryForeignKey>
</CustomField>